logs/corduroy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/corduroy'...
Compiling './lib/python3.5/site-packages/corduroy/atoms.py'...
***   File "./lib/python3.5/site-packages/corduroy/atoms.py", line 288
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/corduroy/couchdb.py'...
***   File "./lib/python3.5/site-packages/corduroy/couchdb.py", line 1261
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/corduroy/io.py'...
***   File "./lib/python3.5/site-packages/corduroy/io.py", line 500
    except self.blocking.error, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corduroy/tests'...
Compiling './lib/python3.5/site-packages/corduroy/tests/async.py'...
***   File "./lib/python3.5/site-packages/corduroy/tests/async.py", line 1268
    print "Running blocking tests only..."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/corduroy/tests/blocking.py'...
***   File "./lib/python3.5/site-packages/corduroy/tests/blocking.py", line 688
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corduroy-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
